analogue Change Log

Version 0.11-3

	* chooseTaxa: new argument `value` controls whether the data for
	the selected species or a logical vector indicating which columns
	(species) met the selection criteria.

	* scores.prcurve: now preserves the rownames on the `lambda`
	component.

	* sppResponse: new generic function for species responses along
	gradients. A method is provided for objects of class "prcurve"
	is the only available method currently. A `plot()` method for
	`sppResponse()` objects is also provided.

	* rankDC: new function to compute the rank correlation between
	gradient distances (e.g. environmental variables) and distances
	in species composition. Has both base and Lattice graphics plot
	methods (the latter via `dotplot()`).

	* Stratiplot: new arguments `labelAt` and `labelRot` allow the
	placement and rotation variable labels to be controlled, when not
	using a strip.

Version 0.11-2

	* timetrack: plot method now allows plotting of "lc" or "wa"
	site scores for the base ordination. The latter is the default
	to maintain backwards compatability.

	The `formula` argument was not well implemented; using it would
	mean that `X`, the main species data, would not be transformed,
	and you couldn't use direct variables as these would not be found.

	Now `formula` takes a one-sided formula describing the constraints.
	Variables will be looked up inside the object passed to `env`. As
	such, `env` needs to be a data frame or an object accepted as the
	`data` argument in `model.frame()`.

	The `fitted` method has changed slightly. The `type` argument
	has been renamed `which`.

	* scores: new methods for objects of class "timetrack" and
	class "prcurve".

	* analog: gains a method for objects of class "distance".

	* distance: gains a new attribute ('type') which contains an
	indicator of whether the distance matrix is symmetric (computed
	on a single matrix) or asymmetric (dissimilarities between samples
	of two matrices).
